--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -18,8 +13,25 @@
   color: white;
 }
 
+
+.sensor-container {
+  background-color: #fff;
+  height: 10vh;
+  animation: App-logo-spin infinite 20s linear;
+}
+
 .App-link {
   color: #61dafb;
+}
+
+.list-container{
+  height: 50vh;
+  width: 100vw;
+  background-color: #61dafb;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: flex-start;
 }
 
 @keyframes App-logo-spin {
