--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ code {
 .list-container{
   height: 50vh;
   width: 100vw;
-  background-color: #61dafb;
+  background-color: #000;
   display: flex;
   flex-direction: column;
   justify-content: center;
