made responsive for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,6 @@
   height: 100vh;
   width: 100vw;
   flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  padding: 0px;
+  background-color: #145386;
 }
