--- a/src/components/List/ListItem/index.css
+++ b/src/components/List/ListItem/index.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: 'column';
     margin: 5vh 5vh 0vh 5vh;
-    border-radius: 12px;
+    border-radius: 6px;
     color: #000;
 }
 
@@ -19,19 +19,21 @@
     flex-direction: 'row';
     width: 100%;
     justify-content: space-between;
+    align-items: center;
+    flex-wrap: nowrap;
 }
 
 .title-container p{
-    flex: 6;
+    flex: 10;
     font-size: 1em;
-    margin-left: 5vh;
+    margin-left: 5%;
 }
 
 .location-image-small{
     flex: 1;
-    align-self: flex-end;
     justify-self: right;
-    margin: auto;
+    margin: auto 5% auto auto;
+    height: 75%;
 }
 
 .list-item-expand{
