--- a/src/components/List/index.css
+++ b/src/components/List/index.css
@@ -1,9 +1,10 @@
 .list-container{
   flex: 2;
   width: 100vw;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: flex-start;
   background-color: #6F6F6F;
-}  
+}
