--- a/src/components/List/index.css
+++ b/src/components/List/index.css
@@ -6,5 +6,5 @@
   flex-direction: column;
   justify-content: center;
   align-content: flex-start;
-  background-color: #6F6F6F;
+  background-color: #145386;
 }
