--- a/src/components/BestMatch/index.css
+++ b/src/components/BestMatch/index.css
@@ -7,10 +7,11 @@
 .location-button{
     position: relative;
     background-color: #9A4A81;
+    background: linear-gradient(127deg, #F6836E, #E32A53);
     z-index: 0;
-    margin: 0 auto 5vw auto;
+    margin: auto auto -19% auto;
     width: 50vw;
-    border-radius: 6px;
+    border-radius: 50px;
     justify-content: space-between;
     align-items: center;
     display: flex;
@@ -20,7 +21,8 @@
 }
 
 .location-button:hover{
-    background: #e1e1e1;
+    transform: scale(1.1);
+    box-shadow: 0px 5px rgba(0,0,0,0.1);
 }
 
 .location-button p{
@@ -41,15 +43,31 @@
     flex: 1;
     align-content: center;
     justify-content: center;
+    text-align: center;
     background-color: #145386;
     background: linear-gradient(0deg, rgba(0, 204, 141, 0.5), rgba(1, 18, 44, 1));
-    text-align: center;
     animation: wave 12s infinite;
     -webkit-animation: wave 12s infinite;
     -moz-animation: wave 12s infinite;
     background-size: 100% 100%;
-    top: 0vh;
     color: #fff;
+}
+
+.best-container h3 {
+    margin-top: 20vh;
+    margin-bottom: 5vh;
+    font-weight: lighter;
+    font-size: 1.25em;
+}
+
+.best-container h2 {
+    margin-bottom: 10vh;
+    font-size: 1.25em;
+}
+
+
+.best-container h1 {
+    font-size: 1.5em;
 }
 
 @keyframes wave{
@@ -78,6 +96,5 @@
     border-left: 0; 
     border-bottom: 0; 
     border-top: 25vw solid transparent;
-    margin-top: -25vw; 
     z-index: 1;
 }
