--- a/src/components/List/ListItem/index.css
+++ b/src/components/List/ListItem/index.css
@@ -3,13 +3,15 @@
     transition: 1s;
     display: flex;
     flex-direction: 'column';
-    margin: 5vh 5vh 0vh 5vh;
+    margin: 0vh 5vh 0vh 5vh;
     border-radius: 6px;
     color: #fff;
+    transition: 0.25s;
 }
 
 .list-item-container:hover{
-    background: #e1e1e1;
+    transform: scale(1.05);
+    box-shadow: 0px 5px rgba(0,0,0,0.1);
 }
 
 .title-container{
