--- a/src/components/List/index.css
+++ b/src/components/List/index.css
@@ -4,8 +4,8 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-content: flex-start;
   background-color: #145386;
-  height: 52vh;
+  height: 60vh;
 }
