--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-h1{
+h1,h3{
   color:white
 }
 
