--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,38 @@
   width: 100vw;
   flex-direction: row;
   padding: 0px;
-  background-color: #01122C;
+
+  background-color: #145386;
+  background: linear-gradient(0deg, rgba(0, 204, 141, 0.5), rgba(1, 18, 44, 1));
+  animation: wave 12s infinite;
+  -webkit-animation: wave 12s infinite;
+  -moz-animation: wave 12s infinite;
+  background-size: 100% 100%;
+  color: #fff;
+  z-index: 1;
+}
+
+.stars-container{
+  z-index: 0;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+}
+
+@keyframes wave{
+  0%{background-position:50% 0%}
+  50%{background-position:50% 100%}
+  100%{background-position:50% 0%}
+}
+
+@-webkit-keyframes wave {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+
+@-moz-keyframes wave {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
 }
