--- a/src/components/List/ListItem/index.css
+++ b/src/components/List/ListItem/index.css
@@ -1,32 +1,28 @@
 .list-item-container{
-    background: #47A897;
     transition: 1s;
     display: flex;
     flex-direction: 'column';
-    margin: 0vh 5vh 0vh 5vh;
-    border-radius: 6px;
-    color: #fff;
+    color: #145386;
     transition: 0.25s;
     height: 7.5vh;
-}
-
-.list-item-container:hover{
-    transform: scale(1.05);
-    box-shadow: 0px 5px rgba(0,0,0,0.1);
+    margin: 3% 0% 3% 0%;
 }
 
 .index-container{
-    background-color: #e3e3e3;
     border-radius: 100%;
     text-align: center;
-    color: #47A897;
-    width: 1.25em;
-    height: 1.25em;
+    color: #fff;
+    background-color: #2262A0;
+    width: 2em;
+    height: 2em;
     margin-left: 5%;
+    vertical-align: middle;
 }
 
 .index-container p{
-    margin: 0%;
+    font-size: 1em;
+    margin: auto;
+    line-height: 2em;
 }
 
 .title-container{
