--- a/src/components/BestMatch/index.css
+++ b/src/components/BestMatch/index.css
@@ -1,43 +1,5 @@
 .best-image{
-    height: 50vw;
-    width: 50vw;
     position: relative;
-}
-
-.location-button{
-    position: relative;
-    background-color: #9A4A81;
-    background: linear-gradient(127deg, #F6836E, #E32A53);
-    z-index: 0;
-    margin: auto auto -19% auto;
-    width: 50vw;
-    border-radius: 50px;
-    justify-content: space-between;
-    align-items: center;
-    display: flex;
-    flex-direction: 'row';
-    flex-wrap: nowrap;
-    transition: 0.25s;
-    z-index: 99;
-}
-
-.location-button:hover{
-    transform: scale(1.05);
-    box-shadow: 0px 5px rgba(0,0,0,0.1);
-}
-
-.location-button p{
-    flex: 3;
-    font-size: 1em;
-    margin-left: 5%;
-    color: #fff;
-}
-
-.location-image{
-    flex: 1;
-    justify-self: right;
-    margin: auto 5% auto auto;
-    height: 75%;
 }
 
 .best-container{
@@ -45,37 +7,57 @@
     align-content: center;
     justify-content: center;
     text-align: center;
-    color: #fff;
-    padding-top: 30%;
+    color: #2262A0;
+    background-color: white;
     z-index: 1;
+    width: 90vw;
+    margin: auto;
+    margin-bottom: 10vh;
+    border-radius: 20px;
+    margin-top: 10vh;
+    padding-top: 5vh;
 }
 
-.best-info-container h1, h2, h3{
+.best-container h1, h2, h3{
     margin-top: 0%; 
+    color: #2262A0;
 }
 
 .best-container h3 {
-    font-weight: lighter;
     font-size: 1.25em;
 }
 
 .best-container h2 {
-    font-size: 1.25em;
-}
-
-
-.best-container h1 {
     font-size: 1.5em;
 }
 
-.image-cover{
-    height: 0px;
-    width: 0px;
-    border: 0vw solid transparent; 
-    border-right:100vw solid #145386;
-    border-left: 0; 
-    border-bottom: 0; 
-    border-top: 25vw solid transparent;
-    z-index: 2;
-    position: relative;
+.best-container h1 {
+    font-size: 2em;
+}
+
+.location-button{
+    background-color: #fff;
+    border: 0.1em solid #2262A0;
+    border-radius: 20px;
+    width: 45vw;
+    display: inline-block;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    transition: 1s;
+}
+
+.location-button:hover{
+    transform: scale(1.1);
+    box-shadow: 0 5px 5px rgba(0,0,0, 0.25);
+}
+
+.location-button p{
+    line-height: 1em;
+    font-weight: bolder;
+}
+
+.location-icon{
+    width: 1em;
+    height: 1em;
+    margin-right: 5%;
 }
