--- a/src/components/StarComponent/index.css
+++ b/src/components/StarComponent/index.css
@@ -3,5 +3,5 @@
     background-color: #fff;
     box-shadow: 0 0 5px rgba(0,0,0, 0.5);
     z-index: 0;
-    position: absolute;
+    position: fixed;
 }
