--- a/src/components/List/index.css
+++ b/src/components/List/index.css
@@ -33,23 +33,26 @@
 }
 
 .legend-container{
+  width: 100%;
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  align-items: center;
-  font-size: 0.75em;
+  
 }
 
 .value-container{
-  align-content: center;
-  justify-content: center;
+  margin: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.value-item{
+  margin: 3px;
+  text-align: center;
 }
 
 .value-color{
+  
   border-radius: 100%;
-  background-color: #000;
   width: 0.5em;
   height: 0.5em;
-  margin-right: 5%;
-  display: inline-block;
 }
