--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 .App {
   height: 100%;
   width: 100vw;
-  position: absolute;
-  top: 0px;
   left: 0px;
   flex-direction: row;
   background-color: #145386;
@@ -10,9 +8,8 @@
   animation: wave 12s infinite;
   -webkit-animation: wave 12s infinite;
   -moz-animation: wave 12s infinite;
-  background-size: 100% 100%;
-  color: #fff;
   z-index: 1;
+  background-attachment: fixed;
 }
 
 .stars-container{
