--- a/src/components/List/ListItem/index.css
+++ b/src/components/List/ListItem/index.css
@@ -29,6 +29,7 @@
     flex: 1;
     display: flex;
     flex-direction: 'row';
+    margin-right: 15px;
     width: 100%;
     justify-content: space-between;
     align-items: center;
