--- a/src/components/BestMatch/index.css
+++ b/src/components/BestMatch/index.css
@@ -43,10 +43,11 @@
     border-radius: 20px;
     width: 30vw;
     display: inline-block;
-    padding-top: 10px;
-    padding-bottom:10px;
+    padding-left: 3px;
+    padding-right: 3px;
     margin-bottom: 5vh;
     transition: 0.3s;
+   
 }
 
 .location-button:hover{
@@ -57,6 +58,7 @@
 .location-button p{
     line-height: 1em;
     font-weight: bolder;
+    color:#2262A0;
 }
 
 .location-icon{
